--- a/services/nginx/default.conf
+++ b/services/nginx/default.conf
@@ -1,4 +1,7 @@
 server {
+     location ^~ /php/ {
+      deny all;
+     }
 
      listen 80 default_server;
      root /var/www/html;
@@ -8,6 +11,10 @@ server {
 
      location / {
       try_files $uri $uri/ /index.php?$query_string;
+     }
+
+     location /images/ {
+         root images;
      }
 
      location = /favicon.ico { access_log off; log_not_found off; }
