--- a/services/nginx/Dockerfile
+++ b/services/nginx/Dockerfile
@@ -1,4 +1,5 @@
 FROM nginx:alpine
 
 COPY ./default.conf /etc/nginx/conf.d/default.conf
-RUN chmod 777 /var/www/html/images
+RUN mkdir -p /srv/images/
+RUN chmod 777 /srv/images/
